src/test/resources/lox/error/result_or.lox
print Ok(1).orResult(Error("Error")) is Ok;
print Error("Error").orResult(Ok(1)) is Ok;
